# axum-live-view

./: .gitignore  Cargo.toml  README.md  deny.toml  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
.cargo/: config
.github/workflows/: CI.yml
assets/: axum_live_view.hash.txt  axum_live_view.min.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
assets-precompiled/: axum_live_view.hash.txt  axum_live_view.min.js  package.json  webpack.config.js
assets/src/: index.ts  live_view.ts  liveview.ts
axum-live-view/: Cargo.toml  LICENSE  build.rs
axum-live-view-macros/: Cargo.toml
axum-live-view-macros/src/: lib.rs
axum-live-view/src/: event_data.rs  extract.rs  html.rs  js_command.rs  lib.rs  life_cycle.rs  live_view.rs  macros.rs  middleware.rs  test.rs  topics.rs  ws.rs
axum-live-view/src/html/: diff.rs  mod.rs  private.rs  render.rs  tests.rs
axum-live-view/src/live_view/: combine.rs  embed.rs  lifecycle.rs  mod.rs  subscriptions.rs
axum-live-view/src/pubsub/: encode_decode.rs  in_process.rs  mod.rs
axum-live-view/src/util/: interleave.rs  mod.rs  receiver_stream.rs  stream_ext.rs
axum-liveview/: Cargo.toml
axum-liveview-macros/: Cargo.toml
axum-liveview-macros/src/: lib.rs
axum-liveview/examples/: counter.rs
axum-liveview/src/: associated_data.rs  bindings.rs  html.rs  js.rs  js_command.rs  lib.rs  liveview.js  liveview.rs  manager.rs  middleware.rs  subscriptions.rs  topics.rs  view.rs  ws.rs
axum-liveview/src/js/: liveview.js
axum-liveview/src/live_view/: associated_data.rs  embed.rs  lifecycle.rs  mod.rs  subscriptions.rs
axum-liveview/src/liveview/: associated_data.rs  embed.rs  lifecycle.rs  mod.rs
axum-liveview/src/pubsub/: encode_decode.rs  in_process.rs  message.rs  mod.rs
axum-liveview/src/ts/: index.js  index.js.map  index.ts  liveview.ts
demo-app/: Cargo.toml
demo-app/src/: http_stats.rs  instrument.rs  main.rs
examples/: chat.rs  counter.rs  hello_world.rs
examples/chat/: Cargo.toml  package-lock.json  webpack.config.js
examples/chat/src/: index.js  main.rs
examples/clock/: Cargo.toml  package.json
examples/clock/src/: index.js  main.rs
examples/counter/: Cargo.toml  package-lock.json  package.json  webpack.config.js
examples/counter/src/: app.js  index.js  main.rs
examples/form/: Cargo.toml  package-lock.json  package.json  tsconfig.json
examples/form/src/: index.js  input.rs  main.rs
examples/key-events/: Cargo.toml  package-lock.json  package.json
examples/key-events/src/: main.rs
src/: codec.rs  lib.rs  liveview.js  liveview.rs  manager.rs  message.rs  morphdom.js  pubsub.rs  ws.rs
src/pubsub/: in_process.rs  mod.rs  postgres.rs
xtask/: Cargo.toml
xtask/src/: main.rs
