[package]
name = "axum-liveview"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.3", features = ["ws"] }
bytes = "1.0"
futures-util = "0.3"
maud = "0.23"
tokio = { version = "1.14", features = ["sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
tokio-stream = { git = "https://github.com/tokio-rs/tokio.git" }
axum = { git = "https://github.com/tokio-rs/axum.git" }
