[package]
name = "axum-live-view"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.4", features = ["ws"] }
axum-live-view-macros = { path = "../axum-live-view-macros", version = "0.1" }
bincode = "1.3"
bytes = "1.0"
futures-util = "0.3"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.14", features = ["sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.6", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }

anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
