[package]
name = "axum-live-view"
version = "0.1.0"
edition = "2018"
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Real-time user experiences with server-rendered HTML"
homepage = "https://github.com/davidpdrsn/axum-live-view"
keywords = ["http", "web", "elm"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-live-view"

[features]
default = []
precompiled-js = []

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.6.0", features = ["ws"] }
axum-live-view-macros = { path = "../axum-live-view-macros", version = "0.1" }
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http = "0.2"
percent-encoding = "2.1"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
tokio = { version = "1.14", features = ["sync", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
assert-json-diff = "2.0"
