[package]
name = "axum-liveview"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.4", features = ["ws"] }
axum-liveview-macros = { path = "../axum-liveview-macros", version = "0.1" }
bincode = "1.3"
bytes = "1.0"
futures-util = "0.3"
itertools = "0.10"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio-util = { version = "0.6", features = ["io"] }

[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
