[package]
name = "example-counter"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
axum = "0.4"
axum-live-view = { path = "../../axum-live-view", version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.2", features = ["fs"] }

time = { version = "0.3.5", features = ["local-offset", "formatting"] }
