[package]
name = "example-key-events"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
axum = "0.6.0-rc.5"
axum-live-view = { path = "../../axum-live-view", version = "0.1", features = ["precompiled-js"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
tower-http = { version = "0.2", features = ["fs"] }
